--- a/CS531-1.vcxproj.filters
+++ b/CS531-1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="RandomAgent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModelAgent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RandomAgent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModelAgent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
